# bootlab-pxe

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  cloudflare_access.py  config.py  db.py  events.py  fog_client.py  locales.py  main.py  oui.py  routes_api.py  routes_boot.py  routes_fog.py  routes_stage.py  schemas.py
backend/app/templates/: autounattend.xml.j2  post-install.ps1.j2
data/profiles/inventory/overlay-build/etc/local.d/: inventory.start
etc/iam-os/: tgt-iam-os.conf
fog/ipxe/: default.ipxe
fog/scripts/: SetupComplete.cmd  post-deploy.ps1
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/fog/: page.tsx
frontend/src/app/intents/: page.tsx
frontend/src/app/machines/: page.tsx
frontend/src/app/machines/[mac]/: page.tsx
frontend/src/app/profiles/: page.tsx
frontend/src/app/setup-scripts/: page.tsx
frontend/src/components/: live-feed.tsx  nav.tsx  query-provider.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/lib/: api.ts
migrations/: 001_initial.sql  002_hardware_fingerprint.sql  003_components.sql  004_fog_profile.sql  005_setup_scripts.sql  006_iam_os_profile.sql
pxe/: Dockerfile  entrypoint.sh
pxe/s6/dnsmasq/: run
pxe/s6/samba/: run
pxe/scripts/: setup-iso.sh
pxe/templates/: boot.ipxe.template  dnsmasq.conf.template  nginx.conf.template  smb.conf.template  startnet.cmd.template
scripts/: build-iam-os-dev-image.sh  flash-usb.sh
