[project]
name = "blueteam-panel-backend"
version = "0.1.0"
description = "Blue Team Boot Platform — control plane API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "python-multipart>=0.0.20",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyjwt[crypto]>=2.9",
]

[tool.uv]
package = false
